--- a/index.html
+++ b/index.html
@@ -497,19 +497,18 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <!-- <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12"> -->
 
-            <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <!-- <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a"> -->
                       <img src="https://media.licdn.com/dms/image/D5603AQHKxaLMotG29Q/profile-displayphoto-shrink_200_200/0/1676660724174?e=1686787200&v=beta&t=WJuybGXELGEvcdcDZL72gI9chl6hIsU0cVkxthsxIVU" alt="" class="rounded-circle b-shadow-a">
                       
                       <span class="author">Amit Kumar Sharma</span>
@@ -522,7 +521,7 @@ While he grows in experience, would love to see him mastering the skill of multi
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
@@ -537,18 +536,19 @@ While he grows in experience, would love to see him mastering the skill of multi
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
               </div>
               <div class="swiper-pagination"></div>
-            </div>
+            </div> -->
 
             <!-- <div id="testimonial-mf" class="owl-carousel owl-theme">
           
         </div> -->
-          </div>
+          <!-- </div>
         </div>
       </div>
-    </div><!-- End Testimonials Section -->
+    </div> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog-mf sect-pt4 route">
